feat:整合Dubbo和nacos框架

--- a/next-api-backend/src/main/resources/application.yml
+++ b/next-api-backend/src/main/resources/application.yml
@@ -90,3 +90,14 @@ cos:
     secretKey: xxx
     region: xxx
     bucket: xxx
+
+
+dubbo:
+  application:
+    name: next-api-backend
+  protocol:
+    name: dubbo
+    port: -1
+  registry:
+    id: nacos-registry
+    address: nacos://120.46.207.211:8848
