--- a/next-api-gateway/src/main/resources/application.yml
+++ b/next-api-gateway/src/main/resources/application.yml
@@ -10,3 +10,13 @@ spring:
           uri: http://localhost:9178
           predicates:
             - Path=/api/**
+
+dubbo:
+  application:
+    name: next-api-gateway
+  protocol:
+    name: dubbo
+    port: -1
+  registry:
+    id: nacos-registry
+    address: nacos://120.46.207.211:8848
