--- a/next-api-backend/pom.xml
+++ b/next-api-backend/pom.xml
@@ -17,8 +17,21 @@
     <name>next-api-backend</name>
     <properties>
         <java.version>1.8</java.version>
+        <dubbo.version>3.1.3</dubbo.version>
     </properties>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo -->
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>3.0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
         <dependency>
             <groupId>cn.nexura</groupId>
             <artifactId>next-api-client-sdk</artifactId>
