--- a/next-api-backend/pom.xml
+++ b/next-api-backend/pom.xml
@@ -11,7 +11,7 @@
         <version>2.7.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.yupi</groupId>
+    <groupId>cn.nexura</groupId>
     <artifactId>next-api-backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>next-api-backend</name>
@@ -20,6 +20,11 @@
         <dubbo.version>3.1.3</dubbo.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>cn.nexura</groupId>
+            <artifactId>next-api-common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo -->
         <dependency>
             <groupId>org.apache.dubbo</groupId>
@@ -35,7 +40,7 @@
         <dependency>
             <groupId>cn.nexura</groupId>
             <artifactId>next-api-client-sdk</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
