--- a/next-api-gateway/pom.xml
+++ b/next-api-gateway/pom.xml
@@ -37,6 +37,12 @@
 
         <dependency>
             <groupId>cn.nexura</groupId>
+            <artifactId>next-api-common</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.nexura</groupId>
             <artifactId>next-api-client-sdk</artifactId>
             <version>0.0.2</version>
         </dependency>
