--- a/next-api-frontend/package.json
+++ b/next-api-frontend/package.json
@@ -46,12 +46,18 @@
     "not ie <= 10"
   ],
   "dependencies": {
+    "@ant-design/charts": "^2.0.3",
     "@ant-design/icons": "^4.8.1",
+    "@ant-design/plots": "^2.1.12",
     "@ant-design/pro-components": "^2.6.28",
     "@umijs/route-utils": "^2.2.2",
     "antd": "^5.9.4",
     "antd-style": "^3.5.2",
     "classnames": "^2.3.2",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
+    "g2": "^2.3.13",
+    "g2-react": "^1.3.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "omit.js": "^2.0.2",
