--- a/next-api-frontend/package.json
+++ b/next-api-frontend/package.json
@@ -50,6 +50,7 @@
     "@ant-design/icons": "^4.8.1",
     "@ant-design/plots": "^2.1.12",
     "@ant-design/pro-components": "^2.6.28",
+    "@uiw/react-textarea-code-editor": "^3.0.2",
     "@umijs/route-utils": "^2.2.2",
     "antd": "^5.9.4",
     "antd-style": "^3.5.2",
@@ -60,6 +61,7 @@
     "g2-react": "^1.3.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "monaco-editor": "^0.45.0",
     "omit.js": "^2.0.2",
     "querystring": "^0.2.1",
     "rc-menu": "^9.12.0",
