modify:调整接口调用策略，调整前端全局颜色

--- a/next-api-frontend/src/manifest.json
+++ b/next-api-frontend/src/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "next API",
   "display": "standalone",
   "start_url": "./?utm_source=homescreen",
-  "theme_color": "#002140",
+  "theme_color": "#722ED1",
   "background_color": "#001529",
   "icons": [
     {
