--- a/next-api-frontend/package.json
+++ b/next-api-frontend/package.json
@@ -67,6 +67,7 @@
     "rc-menu": "^9.12.0",
     "rc-util": "^5.37.0",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dev-inspector": "^1.9.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0"
